# hooky

./: .hooky.kdl  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  cabal.project  hooky-config.toml  hooky-config.yaml  hooky.cabal  package.yaml  stack.yaml
.github/workflows/: build.yml  build_and_test.yml  cabal_file.yml  ci.yml  release.yml
exe/: Main.hs
scripts/: release_notes.py
scripts/demo/: README.md  demo.tape  generate.sh  hook1.sh  hook2.sh  hook3.sh  hook_impl.sh  hooky.kdl
src/: Hooky.hs  Main.hs
src/Data/: KDL.hs
src/Hooky/: Config.hs  Error.hs  Git.hs  Install.hs  Lint.hs  Run.hs
src/Hooky/Internal/: Messages.hs  Output.hs  Temp.hs
src/Hooky/Run/: ExecutionPlan.hs
src/Hooky/Utils/: Directory.hs  Git.hs  Path.hs  Process.hs  Term.hs
test/: Main.hs
test/Hooky/: ConfigSpec.hs  ConfigTest.hs  E2ESpec.hs  GitTest.hs  InstallTest.hs  LintSpec.hs  RunTest.hs  TestUtils.hs
test/Hooky/Run/: ExecutionPlanTest.hs
test/Hooky/TestUtils/: Git.hs  Hooky.hs
test/Hooky/Utils/: GitTest.hs
test/Hooky/__snapshots__/: E2ESpec.snap.md  LintSpec.snap.md
