cabal-version: 3.0

name: hooky
version: 0.0.0
synopsis: A minimal git hooks manager
description: A minimal git hooks manager.
homepage: https://github.com/brandonchinn178/hooky#readme
bug-reports: https://github.com/brandonchinn178/hooky/issues
author: Brandon Chinn <brandonchinn178@gmail.com>
maintainer: Brandon Chinn <brandonchinn178@gmail.com>
license: BSD-3-Clause
license-file: LICENSE.md
category: Tools
build-type: Simple
extra-source-files:
  README.md
  test/Hooky/__snapshots__/LintSpec.snap.md

source-repository head
  type: git
  location: https://github.com/brandonchinn178/hooky

library
  hs-source-dirs: src
  exposed-modules:
    Hooky.Config
    Hooky.Error
    Hooky.Lint
    Hooky.Run
    Hooky.Utils.Git
    Hooky.Utils.Process
    Hooky.Utils.Term
  build-depends:
      base < 5
    , ansi-terminal
    , bytestring
    , concurrent-output
    , containers
    , directory
    , kdl-hs >= 0.2.0
    , process
    , scientific
    , text
    , unliftio
  default-language: GHC2024
  ghc-options: -Wall -Wcompat

executable hooky
  main-is: src/Main.hs
  build-depends:
      base
    , directory
    , filepath
    , hooky
    , optparse-applicative
    , process
    , text
    , unliftio
  default-language: GHC2024
  ghc-options: -Wall -Wcompat

test-suite hooky-tests
  type: exitcode-stdio-1.0
  ghc-options: -F -pgmF=skeletest-preprocessor
  build-tool-depends: skeletest:skeletest-preprocessor
  hs-source-dirs: test
  main-is: Main.hs
  other-modules:
    Hooky.ConfigSpec
    Hooky.LintSpec
    Hooky.TestUtils.Git
  build-depends:
      base
    , directory
    , filepath
    , hooky
    , skeletest >= 0.3.0
    , temporary
    , text
    , unliftio
  default-language: GHC2024
  ghc-options: -Wall -Wcompat
