cabal-version: 3.0

name: hooky
version: 1.0.1
synopsis: A minimal git hooks manager
description: A minimal git hooks manager.
homepage: https://github.com/brandonchinn178/hooky#readme
bug-reports: https://github.com/brandonchinn178/hooky/issues
author: Brandon Chinn <brandonchinn178@gmail.com>
maintainer: Brandon Chinn <brandonchinn178@gmail.com>
license: BSD-3-Clause
license-file: LICENSE.md
category: Tools
build-type: Simple
extra-source-files:
  README.md
  test/Hooky/__snapshots__/E2ESpec.snap.md
  test/Hooky/__snapshots__/LintSpec.snap.md

source-repository head
  type: git
  location: https://github.com/brandonchinn178/hooky

library
  hs-source-dirs: src
  exposed-modules:
    Hooky.Config
    Hooky.Error
    Hooky.Lint
    Hooky.Run
    Hooky.Internal.Messages
    Hooky.Internal.Output
    Hooky.Internal.Temp
    Hooky.Utils.Directory
    Hooky.Utils.Git
    Hooky.Utils.Process
    Hooky.Utils.Term
  build-depends:
      base < 5
    , ansi-terminal
    , bytestring
    , concurrent-output
    , containers
    , directory
    , filepath
    , kdl-hs >= 0.2.0
    , process
    , scientific
    , text
    , time
    , unliftio
  default-language: GHC2024
  ghc-options: -Wall -Wcompat

executable hooky
  main-is: src/Main.hs
  other-modules:
    Paths_hooky
  build-depends:
      base
    , containers
    , directory
    , filepath
    , hooky
    , optparse-applicative
    , process
    , text
    , unliftio
  default-language: GHC2024
  ghc-options:
    -Wall -Wcompat
    -- https://github.com/commercialhaskell/stack/issues/3918
    -optP-Wno-nonportable-include-path

test-suite hooky-tests
  type: exitcode-stdio-1.0
  ghc-options: -F -pgmF=skeletest-preprocessor
  build-tool-depends:
    , skeletest:skeletest-preprocessor
    , hooky:hooky
  hs-source-dirs: test
  main-is: Main.hs
  other-modules:
    Hooky.ConfigSpec
    Hooky.E2ESpec
    Hooky.LintSpec
    Hooky.TestUtils.Git
    Hooky.TestUtils.Hooky
  build-depends:
      base
    , directory
    , filepath
    , hooky
    , process
    , skeletest >= 0.3.0
    , temporary
    , text
    , unliftio
  default-language: GHC2024
  ghc-options: -Wall -Wcompat
